--- a/.jacocoverage/report.html/my.distbebidas/ComprasDAO.java.html
+++ b/.jacocoverage/report.html/my.distbebidas/ComprasDAO.java.html
@@ -15,8 +15,8 @@ public class ComprasDAO{
 <span class="nc" id="L15">        this.data = data;</span>
 <span class="nc" id="L16">    }</span>
 
-<span class="nc" id="L18">    ComprasDAO(String id, String nome, String produto, String data) {</span>
-<span class="nc" id="L19">        throw new UnsupportedOperationException(&quot;Not supported yet.&quot;); //To change body of generated methods, choose Tools | Templates.</span>
+<span class="fc" id="L18">    ComprasDAO(String id, String nome, String produto, String data) {</span>
+<span class="fc" id="L19">        throw new UnsupportedOperationException(&quot;Not supported yet.&quot;); //To change body of generated methods, choose Tools | Templates.</span>
     }
     
      public void setIdcompra(int idcompra) {
