--- a/.jacocoverage/report.html/my.distbebidas/DistBebidasUI.java.html
+++ b/.jacocoverage/report.html/my.distbebidas/DistBebidasUI.java.html
@@ -72,8 +72,8 @@ public class DistBebidasUI extends javax.swing.JFrame {
         });
 <span class="fc" id="L73">        jMenuItemCadastroFornecedor.addActionListener(new java.awt.event.ActionListener() {</span>
             public void actionPerformed(java.awt.event.ActionEvent evt) {
-<span class="nc" id="L75">                jMenuItemCadastroFornecedorActionPerformed(evt);</span>
-<span class="nc" id="L76">            }</span>
+<span class="fc" id="L75">                jMenuItemCadastroFornecedorActionPerformed(evt);</span>
+<span class="fc" id="L76">            }</span>
         });
 <span class="fc" id="L78">        jMenuCadastrar.add(jMenuItemCadastroFornecedor);</span>
 
@@ -125,8 +125,8 @@ public class DistBebidasUI extends javax.swing.JFrame {
 <span class="fc" id="L125">        jMenuItem2.setText(&quot;Consultar&quot;);</span>
 <span class="fc" id="L126">        jMenuItem2.addActionListener(new java.awt.event.ActionListener() {</span>
             public void actionPerformed(java.awt.event.ActionEvent evt) {
-<span class="nc" id="L128">                jMenuItem2ActionPerformed(evt);</span>
-<span class="nc" id="L129">            }</span>
+<span class="fc" id="L128">                jMenuItem2ActionPerformed(evt);</span>
+<span class="fc" id="L129">            }</span>
         });
 <span class="fc" id="L131">        jMenu5.add(jMenuItem2);</span>
 
@@ -178,9 +178,9 @@ public class DistBebidasUI extends javax.swing.JFrame {
     
     private void jMenuItemCadastroFornecedorActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenuItemCadastroFornecedorActionPerformed
             // TODO add your handling code here:
-<span class="nc" id="L181">        new TelaCadastroFornecedor().setVisible(true);</span>
-<span class="nc" id="L182">        DistBebidasUI.this.dispose();</span>
-<span class="nc" id="L183">    }//GEN-LAST:event_jMenuItemCadastroFornecedorActionPerformed</span>
+<span class="fc" id="L181">        new TelaCadastroFornecedor().setVisible(true);</span>
+<span class="fc" id="L182">        DistBebidasUI.this.dispose();</span>
+<span class="fc" id="L183">    }//GEN-LAST:event_jMenuItemCadastroFornecedorActionPerformed</span>
 
     private void jMenuItemCadastroClienteActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenuItemCadastroClienteActionPerformed
 <span class="fc" id="L186">        new TelaCadastroCliente().setVisible(true);</span>
@@ -189,9 +189,9 @@ public class DistBebidasUI extends javax.swing.JFrame {
 
     private void jMenuItem2ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenuItem2ActionPerformed
         // TODO add your handling code here:
-<span class="nc" id="L192">        new TelaEstoque().setVisible(true);</span>
-<span class="nc" id="L193">        DistBebidasUI.this.dispose();</span>
-<span class="nc" id="L194">    }//GEN-LAST:event_jMenuItem2ActionPerformed</span>
+<span class="fc" id="L192">        new TelaEstoque().setVisible(true);</span>
+<span class="fc" id="L193">        DistBebidasUI.this.dispose();</span>
+<span class="fc" id="L194">    }//GEN-LAST:event_jMenuItem2ActionPerformed</span>
 
     private void jMenuItem5ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenuItem5ActionPerformed
         // TODO add your handling code here:
