--- a/.jacocoverage/report.html/my.distbebidas/TelaCadastroCompras.java.html
+++ b/.jacocoverage/report.html/my.distbebidas/TelaCadastroCompras.java.html
@@ -159,10 +159,10 @@ public class TelaCadastroCompras extends javax.swing.JFrame {
     private void jButtonConfirmarActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButtonConfirmarActionPerformed
         // TODO add your handling code here:
 
-<span class="nc" id="L162">        String id = jTextFieldId.getText();</span>
-<span class="nc" id="L163">        String nome = jTextFieldNome.getText();</span>
-<span class="nc" id="L164">        String produto = jTextFieldProduto.getText();</span>
-<span class="nc" id="L165">        String data = jTextFieldData.getText();</span>
+<span class="fc" id="L162">        String id = jTextFieldId.getText();</span>
+<span class="fc" id="L163">        String nome = jTextFieldNome.getText();</span>
+<span class="fc" id="L164">        String produto = jTextFieldProduto.getText();</span>
+<span class="fc" id="L165">        String data = jTextFieldData.getText();</span>
 
 
         /*Verifica se há campos obr. vazios. Se não tiver, faz a inserção no BD.*/
