--- a/.jacocoverage/report.html/my.distbebidas/TelaCadastroVendas.java.html
+++ b/.jacocoverage/report.html/my.distbebidas/TelaCadastroVendas.java.html
@@ -169,10 +169,10 @@ public class TelaCadastroVendas extends javax.swing.JFrame {
     private void jButtonConfirmarActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButtonConfirmarActionPerformed
         // TODO add your handling code here:
 
-<span class="nc" id="L172">        String id = jTextFieldId.getText();</span>
-<span class="nc" id="L173">        String nome = jTextFieldNome.getText();</span>
-<span class="nc" id="L174">        String produto = jTextFieldProduto.getText();</span>
-<span class="nc" id="L175">        String data = jTextFieldData.getText();</span>
+<span class="fc" id="L172">        String id = jTextFieldId.getText();</span>
+<span class="fc" id="L173">        String nome = jTextFieldNome.getText();</span>
+<span class="fc" id="L174">        String produto = jTextFieldProduto.getText();</span>
+<span class="fc" id="L175">        String data = jTextFieldData.getText();</span>
 
         /*Verifica se há campos obr. vazios. Se não tiver, faz a inserção no BD.*/
 <span class="nc" id="L178">        VendasDAO venda = new VendasDAO(id, nome, produto, data);</span>
